objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Advisor Portal</fullName>
        <description>Case Status Values for Advisor Portal</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Affiliate Request</fullName>
        <description>A process for Sales or Business Operations to track the requests for affiliate support in a call, meeting, event, etc</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Need More Info</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>with Affiliate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Campaign Email Request</fullName>
        <description>For Business Campaign Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled not Launched</fullName>
        </values>
        <values>
            <fullName>Closed Launched</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Data Operations</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IPM No Legal Review</fullName>
        <description>Used for IPM cases that do not require Legal Review</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Review by a team leader</fullName>
        </values>
        <values>
            <fullName>with Affiliate</fullName>
        </values>
        <values>
            <fullName>with Subject Matter Expert %28internal%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IPM Standard</fullName>
        <description>Used for most IPM case types</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Review by a team leader</fullName>
        </values>
        <values>
            <fullName>with Affiliate</fullName>
        </values>
        <values>
            <fullName>with Legal</fullName>
        </values>
        <values>
            <fullName>with Subject Matter Expert %28internal%29</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PRCG Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Analytic Completed</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>QC Completed</fullName>
        </values>
        <values>
            <fullName>Ready To QC</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
        <values>
            <fullName>Unsubmitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Private Wealth Portal</fullName>
        <description>Process for PW cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>In Progress-Vestmark</fullName>
        </values>
        <values>
            <fullName>Needs More Information</fullName>
        </values>
        <values>
            <fullName>Needs Signature</fullName>
        </values>
        <values>
            <fullName>Returned for Revision</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RFI %26 RFP</fullName>
        <description>Used for RFI and RFP Requests.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Review by a team leader</fullName>
        </values>
        <values>
            <fullName>with Affiliate</fullName>
        </values>
        <values>
            <fullName>with Legal</fullName>
        </values>
        <values>
            <fullName>with Subject Matter Expert %28internal%29</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountAllocation__c</fullName>
        <description>For Private Wealth Portal, detailed changes needed for Account Investment Change Request to be displayed in "Details" field</description>
        <label>Account Allocation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AccountNumberOLD__c</fullName>
        <description>No longer used. Encrypted Account Number for PW Cases. Users need the View Encrypted Data permission set to view the fields.</description>
        <label>Account Number OLD</label>
        <length>30</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <description>Investor Account ID, Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountTitleOLD__c</fullName>
        <description>No longer used. Encrypted Account Title field for PW Cases. Users need the View Encrypted Data Permission set to see the data.</description>
        <label>Account Title OLD</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>AccountTitle__c</fullName>
        <description>Investor Account Title, Bi-Directional for new Cases, P to SFDC for updates</description>
        <label>Account Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AdTraxCode__c</fullName>
        <description>The AdTrax Code entered by Prod Mgt Ops when they close an RFI/RFP case.</description>
        <label>AdTrax Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffiliateFirmName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A customized look up field</description>
        <label>Affiliate Firm Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AffiliateFunds__c</fullName>
        <label>Affiliate Fund(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AffiliateSpeaker_Names__c</fullName>
        <label>AffiliateSpeaker Names</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Artemus.Request.pmg_id
varchar(25)</description>
        <label>Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnchorMeeting__c</fullName>
        <label>Anchor Meeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ArtemusRequestIdUrl__c</fullName>
        <formula>HYPERLINK('/'&amp; Id, RequestArtemusID__c, '_self')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Artemus Request ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArtermusLink__c</fullName>
        <formula>HYPERLINK('https://prcapps.ngam.natixis.com/Sales/Detail?requestId='&amp;( RequestArtemusID__c) , 'Request Detail','_Top')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Artermus Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedDateTime__c</fullName>
        <description>For IPM Cases, this represents the datetime the case moved from a Queue to a User.  Set by process builder.</description>
        <label>Assigned Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssignedToWorkedAge__c</fullName>
        <description>The difference in days between the time the case was assigned and the time that work started on the case.  Based on fields maintained for IPM Cases.</description>
        <formula>IF(NOT(ISBLANK( Work_Started_Date_Time__c )) &amp;&amp; NOT(ISBLANK( AssignedDateTime__c )),
   DATEVALUE(Work_Started_Date_Time__c) - DATEVALUE(AssignedDateTime__c),
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Worked Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssociatedAccounts__c</fullName>
        <label>Associated Accounts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AttachmentNames__c</fullName>
        <description>Used by Lookup Rollup Summaries. Attachment names are concatenated. https://globalplatform.my.salesforce.com/a0m2A00000N9rk0</description>
        <label>Attachment Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used by Lookup Rollup Summary: https://globalplatform.my.salesforce.com/a0m2A00000N9rjq
Displayed on Vestmark email</description>
        <label>Number of Attachments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AudienceExclusion__c</fullName>
        <description>For Campaign Email</description>
        <label>Audience Exclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Campaign Email Field</description>
        <label>Audience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AuthorizationReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when Documents are all signed</description>
        <label>Authorization Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benchmark__c</fullName>
        <description>Artemus.Request.benchmark
varchar(50)</description>
        <label>Benchmark</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlendedBenchmark__c</fullName>
        <description>Artemus.Request.blended_benchmark
varchar(255)</description>
        <inlineHelpText>The blended_benchmark maps to the values in code_desc table with cd_type = 'BB'</inlineHelpText>
        <label>Blended Benchmark</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRC</fullName>
                    <default>true</default>
                    <label>PRC</label>
                </value>
                <value>
                    <fullName>FA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The requester's Activity Channel.  This only changes when the requester value changes - not when the requester moves around the role hierarchy.  Set by trigger.</description>
        <label>Case Channel</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Cases (Case Channel)</relationshipLabel>
        <relationshipName>ChannelCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseCreatedviaFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this case was created via a flow, the value will be true.  This is used for a validation rule to ensure that cases come through the flow rather than being entered directly by users.</description>
        <label>Case Created via Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseRegionDept__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The requester's Activity Region or Department.  This only changes when the requester value changes - not when the requester moves around the role hierarchy.  Set by trigger.</description>
        <label>Case Region/Dept</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Cases (Case Region/Dept)</relationshipLabel>
        <relationshipName>RegionCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseTerritory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The requester's Activity Territory.  This only changes when the requester value changes - not when the requester moves around the role hierarchy.  Set by trigger.</description>
        <label>Case Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Cases (Case Territory)</relationshipLabel>
        <relationshipName>TerritoryCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Business_days__c</fullName>
        <description>Number of  Business days after Case Created considering the typical 5 day work week.</description>
        <formula>( (5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE( CreatedDate  )  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(CreatedDate )  - DATE( 1900, 1, 8), 7 ) ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Business days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Date__c</fullName>
        <description>This field is created to calculate the MAX of Closed Date from Cases and populate the LastPRCGProcessDate__c field on Contact. The Roll up is defined using Manage Lookup Rollup Summaries.</description>
        <formula>DATEVALUE(ClosedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Closed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that closed this case.  Set by Business Process "Set Case Closed by"</description>
        <inlineHelpText>The user that closed this case.</inlineHelpText>
        <label>Case Closed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesClosed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Order__c</fullName>
        <formula>IF(ISPICKVAL(Status, 'Submitted'), '1 Submitted', 
 IF(ISPICKVAL(Status, 'In Progress'), '2 In Progress',
 IF(ISPICKVAL(Status, 'Ready to QC'), '3 Ready to QC',
 IF(ISPICKVAL(Status, 'QC Completed'), '4 QC Completed',
 IF(ISPICKVAL(Status, 'Analytic Completed'), '5 Analytic Completed',
'0')))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Full_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; " " &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case_Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryRestrictions__c</fullName>
        <label>Category Restrictions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <description>A field to support the Affiliate Request Process and define if the associated Firm is new or existing business.</description>
        <inlineHelpText>Define if the request is for new or existing business..</inlineHelpText>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>New Business/Prospect</fullName>
                </value>
                <value>
                    <fullName>New &amp; Existing Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <description>This is the date when the PRCG request is completed.</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Artemus.Request.const_id
varchar(25)</description>
        <label>Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consultant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateRecurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recurrence batch job only selects cases with Create Recurrence = true.  Set by process builder based on Frequency.</description>
        <inlineHelpText>If checked, the recurrence batch job will clone this case for the given Recurrence Request Date.</inlineHelpText>
        <label>Create Recurrence?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustodialAccountNumberOLD__c</fullName>
        <description>No longer used. Required to open an account</description>
        <inlineHelpText>Required to open an account</inlineHelpText>
        <label>Custodial Account Number OLD</label>
        <length>30</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CustodialAccountNumber__c</fullName>
        <description>Required to open an account. Bi-Directional for new Cases, P to SFDC for updates</description>
        <inlineHelpText>Required to open an account</inlineHelpText>
        <label>Custodial Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateRequestCompleted__c</fullName>
        <defaultValue>If($RecordType.Name = "RFI/RFP Closed", NOW(), NULL)</defaultValue>
        <description>This date is  to select the closed/sent date of request of the final document.</description>
        <label>Date Request Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaysPastDue__c</fullName>
        <formula>IF (DueDate__c &gt;= TODAY(), 0, IF(!IsClosed,TODAY()-DueDate__c, DATEVALUE(ClosedDate) - DueDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysUntilDue__c</fullName>
        <formula>IF (DueDate__c &gt;= TODAY(), DueDate__c - TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryMethod__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Online Database</fullName>
                </value>
                <value>
                    <fullName>Consultant Database</fullName>
                </value>
                <value>
                    <fullName>3rd Party Database</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Artemus.Request.department
varchar(100)</description>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscretionaryNonDiscretionary__c</fullName>
        <description>Indicates that the Contact has discretion.</description>
        <label>Discretionary/Non-discretionary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discretionary</fullName>
                </value>
                <value>
                    <fullName>Non-discretionary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DueSoon__c</fullName>
        <formula>IF (IsClosed,"",
IF(  DaysUntilDue__c &gt; 7, IMAGE("/img/samples/color_green.gif", "Green", 13, 13),
IF ( DaysUntilDue__c &gt; 3, IMAGE("/img/samples/color_yellow.gif", "Yellow", 13, 13),
IMAGE("/img/samples/color_red.gif", "Red", 13, 13))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Soon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>For Affiliate Request Process</description>
        <label>Duration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Case_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the Affiliate Request process to trigger an email to be sent to the Affiliate for Approval</description>
        <label>Email me the Case Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndClientAttendingReason__c</fullName>
        <description>This field is a step after End Client Attending question. It's for Affiliate Request Process flow.</description>
        <label>End Client Attending Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndClientAttending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fields is for Affiliate Request Process flow</description>
        <label>End Client Attending?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstContactResolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advisor Portal Field</description>
        <inlineHelpText>Incident resolved within first contact made by the customer</inlineHelpText>
        <label>First Contact Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstEventStartDatetime__c</fullName>
        <description>Set by trigger to be the first start date time of the all events associated with the case.</description>
        <inlineHelpText>The first start datetime of the any events associated with the case</inlineHelpText>
        <label>First Event Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <description>RFP Format</description>
        <inlineHelpText>RFP Format</inlineHelpText>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customized</fullName>
                </value>
                <value>
                    <fullName>Standardized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency of the RFI</description>
        <inlineHelpText>Frequency of the RFI</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>SemiAnnually</fullName>
                    <label>Semi-Annually</label>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAmCaseAnalyst__c</fullName>
        <description>True if the user who is logged in is the Analyst on the case</description>
        <formula>Analyst__c =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I Am Case Analyst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAmCaseConsultant__c</fullName>
        <description>True if the user who is logged in is the Consultant on the case</description>
        <formula>Analyst__c = $User.Id || Consultant__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I Am Case Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>Advisor Portal Field</description>
        <inlineHelpText>The impact is defined by number of users being affected as a result of an issue</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All users</fullName>
                </value>
                <value>
                    <fullName>Small group of users</fullName>
                </value>
                <value>
                    <fullName>Single User</fullName>
                </value>
                <value>
                    <fullName>VIP (Important FA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investment_Strategy__c</fullName>
        <description>A field to support the Affiliate Request Process.</description>
        <label>Investment Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsIPMCase__c</fullName>
        <description>If a case record type is one of the IPM Case record types, true; else false.  Used in process builders, etc. for easy maintenance and reporting.</description>
        <formula>IF(OR(RecordType.Name = 'RFI',RecordType.Name = 'DDQ',RecordType.Name = 'IPM External Request',RecordType.Name = 'IPM Internal Request',RecordType.Name = 'RFP'),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrivateWealthCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Wealth Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastCommentDatetime__c</fullName>
        <description>Datetime of the last comment made on the case.  Filled by process builder.</description>
        <inlineHelpText>Datetime of the last comment made on the case</inlineHelpText>
        <label>Last Comment Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCommentText__c</fullName>
        <description>Stores the first 255 characters of the last comment made on the case.  Filled by workflow.</description>
        <inlineHelpText>Stores the first 255 characters of the last comment made on the case.</inlineHelpText>
        <label>Last Comment Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastEventEndDatetime__c</fullName>
        <description>Set by trigger to be the last end date time of the all events associated with the case.  Used by time-based workflow to automatically close the case after the last even has occurred.</description>
        <inlineHelpText>The last end datetime of the any events associated with the case</inlineHelpText>
        <label>Last Event End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_FA_Affiliate_Meeting_Date__c</fullName>
        <description>A field to support the Affiliate Request Process</description>
        <inlineHelpText>Enter the date(s) of when the Affiliate previously met with the Firm</inlineHelpText>
        <label>Last FA/Affiliate Meeting Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadTime__c</fullName>
        <formula>DueDate__c -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Indicates whether the RFI/RFP is at the Affiliate or Product/Strategy level</description>
        <inlineHelpText>Indicates whether the RFI/RFP is at the Affiliate or Product/Strategy level</inlineHelpText>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Product/Strategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiquidationType__c</fullName>
        <description>For Private Wealth Case, picklist field: Full or Partial</description>
        <label>Liquidation Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TerminationType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <label>Location(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaterialsPresentations__c</fullName>
        <description>Field to support the Affiliate Request process.</description>
        <label>Materials and Presentations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>